--- a/cypress.env.json.example
+++ b/cypress.env.json.example
@@ -1,30 +1,48 @@
 {
   "users": {
-    "admin": {
-      "user": "test_admin",
-      "pass": "Testing123"
-    },
     "standard": {
       "user": "test_user",
       "pass": "Testing123"
     },
-    "standard2": {
-      "user": "test_user2",
+    "admin": {
+      "user": "test_admin",
+      "pass": "Testing123"
+    },
+    "Test_Admin": {
+      "user": "Test_Admin",
+      "pass": "Testing123"
+    },
+    "Test_User1": {
+      "user": "Test_User1",
+      "pass": "Testing123"
+    },
+    "Test_User2": {
+      "user": "Test_User2",
+      "pass": "Testing123"
+    },
+    "Test_User3": {
+      "user": "Test_User3",
+      "pass": "Testing123"
+    },
+    "Test_User4": {
+      "user": "Test_User4",
       "pass": "Testing123"
     }
   },
-  "redcap_version": "9.1.3",
+  "redcap_version": "14.7.0",
+  "language": "English",
   "redcap_hooks_path": "/var/www/html/hook_functions.php",
-  "redcap_source_path": "./www",
-  "temp_folder": "/path/to/www/temp",
+  "redcap_source_path": "../../redcap_cypress_docker/redcap_source",
+  "temp_folder": "../../redcap_cypress_docker/redcap_source/temp",
   "mysql": {
-    "host": "127.0.0.1",
+   "host": "127.0.0.1",
     "path": "mysql",
     "port": "3400",
     "db_name": "redcap",
     "db_user": "root",
     "db_pass": "root"
   },
+  "timezone_override": "Europe/London",
   "bootstrap_settings": {
     "core": true,
     "hooks": false,
