--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,10 +1,10 @@
 version: 2.0
 
 jobs:
-  build:
-    machine:
-      image: ubuntu-2004:202201-02
-    parallelism: 6
+  test:
+    docker:
+      - image: cypress/browsers:node-18.12.0-chrome-106  # Use a docker image that fits your needs
+    resource_class: large  # Now valid since you're using docker executor
     steps:
       - checkout
       - run:
