--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,7 +31,7 @@ commands:
           name: Build the REDCap Image
           command: |
             cd << parameters.dir >>
-            git clone --branch xdebug https://github.com/vanderbilt-redcap/redcap_docker
+            git clone --branch xdebug git@github.com:CCTC-team/CCTC_REDCap_Docker.git
       - run:
           name: Get REDCap Source
           command: |
@@ -41,7 +41,7 @@ commands:
             git clone git@github.com:MintooXavier/redcap_source.git
             # cp -a redcap_v${REDCAP_VERSION}/Resources/install_files/redcap/* .
             # cp -a redcap_v${REDCAP_VERSION}/Resources/nonversioned_files/* .
-            # cp ../.circleci/redcap_install_files/* .
+            cp ../.circleci/redcap_install_files/* .
 
 jobs:
   run-tests:
