--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -60,6 +60,7 @@ jobs:
           name: Start Docker REDCap Container
           command: |
             cd /home/circleci/project/CCTC_REDCap_Docker
+            docker volume create mySQLVolume
             docker-compose up -d
       # - run:
       #     name: Install composer dependencies
