--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -75,11 +75,11 @@ jobs:
       #     name: Permissions on coverage files
       #     command: |
       #       docker exec -it redcap_docker-app-1 sh -c "chmod 777 /tmp/path/coverage"
-      - run:
-          name: Change eDocs & Temp folder permissions
-          command: |
-            sudo chmod 777 /home/circleci/project/edocs
-            sudo chmod 777 /home/circleci/project/tmp
+      # - run:
+      #     name: Change eDocs & Temp folder permissions
+      #     command: |
+      #       sudo chmod 777 /home/circleci/project/edocs
+      #       sudo chmod 777 /home/circleci/project/tmp
       - run:
           name: Configure Cypress environment
           command: |
